package adapter.adapterClass;

public class Voltage220 {
    public int output220() {
        int original = 220;
        System.out.println("voltage=" + original);
        return original;
    }
}
