package adapter.adapterClass;

public interface Voltage5 {
    public int output5();
}
